[gd_scene load_steps=10 format=2]

[ext_resource path="res://CleaningScene/Sprites/Lena.png" type="Texture" id=1]
[ext_resource path="res://CleaningScene/Sprites/mop.png" type="Texture" id=2]
[ext_resource path="res://CleaningScene/Lena.gd" type="Script" id=3]
[ext_resource path="res://CleaningScene/Sprites/space.png" type="Texture" id=4]
[ext_resource path="res://CleaningScene/Space.gd" type="Script" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 72.0
height = 272.0

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 96.0
height = 128.0

[node name="Lena" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
z_index = 1
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 32, 0 )
texture = ExtResource( 1 )
flip_h = true
hframes = 9

[node name="Mop" type="Sprite" parent="Sprite"]
texture = ExtResource( 2 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 112 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/walk = SubResource( 3 )

[node name="MopArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MopArea"]
position = Vector2( 48, 224 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="WalkAudio" type="AudioStreamPlayer" parent="."]

[node name="WashAudio" type="AudioStreamPlayer" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="Space" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -448 )
texture = ExtResource( 4 )
script = ExtResource( 5 )

[node name="FadingAnimation" type="Tween" parent="Space"]
